--- a/Rapport 3/rapport3_elast_nichoka_newformating.tex
+++ b/Rapport 3/rapport3_elast_nichoka_newformating.tex
@@ -182,7 +182,19 @@ Determining the Youngs' modulus of a brass rod by measuring the deflection in th
       \label{tab:masses_calibrated}
     \end{table}
 
+    \begin{figure}[H]
+      \center
+      \includegraphics[width=8cm]{scripts/figs/thickdat.png}  
+      \caption{Histogram the thickness the of rod measured with micrometer}
+      \label{fig:thick} 
+    \end{figure} 
+
     Table \ref{tab:masses} contains all of the masses measured by the balance scale. The measured mass of the reference weight (which is assumed to be its true mass) is fitted against its measured value with the balance scale using a least square fit, the gradient and zero point in this fit is used to calibrate the weight, and the corrected masses are given in table \ref{tab:masses_calibrated}.
+    \newline
+    \newline
+    In Fig. \ref{fig:thick} the thickness of the brass rod, measured with a micrometer is shown as a histogram. The mean thickness from this data is $d=15.99\,$mm with a standard deviation $\sigma_m = 1.8\,\mu \textup{m}$
+    \newline
+    The length of the brass rod measured with the measuring tape, $L=144.4\pm 0.1\,\textup{cm}$ and the length between the two knives in the three-point flex test was measured in two parts, $l_{knife}=4.091\pm 0.001\,\textup{mm}$ and $l_{BC,\,outer}=0.1cm$. (See Fig. \ref{fig:aparatus1})
 
 
 
@@ -235,7 +247,7 @@ Determining the Youngs' modulus of a brass rod by measuring the deflection in th
 
   \subsection{Results from measuring the speed of sound in the rod}
 
-    When hearing for beats, me and my lab-partner decided that the root frequency was $\approx 1240\enspace\textup{Hz}$.
+    When hearing for beats, me and my lab-partner decided that the root frequency was $\approx 1240\enspace\textup{Hz}$ by the method described in the experimental section.
     \newline
     \begin{figure}[H]
       \centering
@@ -260,7 +272,7 @@ Determining the Youngs' modulus of a brass rod by measuring the deflection in th
     \end{figure}
     
     Fig. \ref{fig:sound_exp1} contains the data and derived results from our fourth attempt of the experiment. We performed a total of 7 attempts, all of which yielded in similar results to attempt no. 4. The data yielded from all of the attempts is summarized in Fig. \ref{fig:sound_all} which shows the peaks in the frequency domain in one plot.
-    Table \ref{tab:fftdat} contains all of the relevant numbers related to each attempt, where $f$ denotes the root frequency, $\Delta f$ the resolution of the frequency domain, $t$ the time of the recording and $f_s$ the sampling frequency. ]
+    Table \ref{tab:fftdat} contains all of the relevant numbers related to each attempt, where $f$ denotes the root frequency, $\Delta f$ the resolution of the frequency domain, $t$ the time of the recording and $f_s$ the sampling frequency.
 
 
     \begin{table}[H]
