--- a/presentasjon/presentasjon.tex
+++ b/presentasjon/presentasjon.tex
@@ -1,22 +1,4 @@
-\documentclass{beamer}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage{lmodern}
-
-\usepackage{mathtools}
-\usepackage{bm}
-\usepackage{booktabs}
-
+\documentclass{article}
 \begin{document}
-
-\begin{frame}
-\frametitle{Test}
-
-Some text and math:
-\[
-\sum_{k=1}^n k^2=n\left(n+\frac{1}{2}\right)(n+1)
-\]
-
-\end{frame}
-
+	
 \end{document}
