--- a/presentasjon/tables.tex
+++ b/presentasjon/tables.tex
@@ -9,7 +9,7 @@
 	  \hline
 	   & Verdi & Feil \\ \hline
 	  $|A|$ & $1.432\cdot10^{-3}$ & $\pm 3.5\cdot10^{-6}$ \\ \hline
-	  $l$ & $1.334$ m & $\pm 0.001$ m \\ \hline
+	  $l$ & $133.4$ cm & $\pm 0.1$ cm \\ \hline
 	  $d$ & $15.99$ mm & $\pm 0.01$mm \\ \hline
 	\end{tabular}	
 \end{table}	
